--- a/DistributionSummary.plist
+++ b/DistributionSummary.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://testhymain.ccbyte.com/zhl_web/file/apk/yykh.ipa</string>
+                    <string>https://github.com/pxygold/ipa/blob/main/yykh.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
